--- a/views/index.mustache
+++ b/views/index.mustache
@@ -9,6 +9,6 @@
   </head>
   <body>
     <div id='app'>{{{react}}}</div>
-    <script type='text/javascript' src='/dist/bundle/app.js'></script>
+    <script type='text/javascript' src='/dist/bundle.js'></script>
   </body>
 </html>
