--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -163,7 +163,7 @@ table {
 }
 
 .jumbotron-right {
-	width: 45%;
+	width: 50%;
 	background-color: #4B5353;
 	opacity: .8;
 	height: 90%;
@@ -288,6 +288,38 @@ table {
 	width: 40.5px;
 	margin-top: 12%;
 }
+
+/*Topics*/
+.topic {
+		-moz-appearance: none;
+		-webkit-appearance: none;
+		-ms-appearance: none;
+		appearance: none;
+		-moz-transition: background-color 0.2s ease, box-shadow 0.2s ease, color 0.2s ease;
+		-webkit-transition: background-color 0.2s ease, box-shadow 0.2s ease, color 0.2s ease;
+		-ms-transition: background-color 0.2s ease, box-shadow 0.2s ease, color 0.2s ease;
+		transition: background-color 0.2s ease, box-shadow 0.2s ease, color 0.2s ease;
+		-webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+		background-color: transparent;
+		border-radius: 8px;
+		border: solid .5px #bbb;
+		box-shadow: inset 0 0 0 1px #cccccc;
+		color: white;
+		cursor: pointer;
+		display: inline-block;
+		font-size: 0.8em;
+		font-weight: 500;
+		height: 2.5em;
+		letter-spacing: 0.25em;
+		line-height: 2.5em;
+		padding: 0 2em;
+		position: relative;
+		margin: .25em .5em auto .5em;
+		text-align: center;
+		text-decoration: none;
+		text-shadow: none;
+		white-space: nowrap;
+	}
 
 /*Draft List*/
 .draft-list-header {
